FrontEnd/k8s/library-system-gateway.yaml
#gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: library-system-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080 
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#virtual-service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: library-system
spec:
  hosts:
  - "*"
  gateways:
  - library-system-gateway
  http:

  # 把所有前綴是"/api/v1/account/user"的api請求轉給account-service處理
  - match:
      - uri:
          prefix: "/api/v1/account"
    route:
      - destination:
          host: account-service.library-system.svc.cluster.local
          port:
            number: 80


  # 把所有前綴是"/api/v1/borrowing"的api請求轉給borrowing-service處理
  - match:
      - uri:
          prefix: "/api/v1/borrowing"
    route:
      - destination:
          host: borrowing-service.library-system.svc.cluster.local
          port:
            number: 80


  # 把所有前綴是"/api/v1/collection"的api請求轉給collection-service處理
  - match:
      - uri:
          prefix: "/api/v1/collection"
    route:
      - destination:
          host: collection-service.library-system.svc.cluster.local
          port:
            number: 80

  - route:
    - destination:
        host: library-system-frontend.library-system.svc.cluster.local
        port:
          number: 8180
